--- a/index.html
+++ b/index.html
@@ -107,69 +107,83 @@
 
     <script id='template_options' type='text/x-handlebars-template' class='template'>
         <div id='options_container'>
-            <div class='options_item'>
-                <div class='options_label'>Ghost</div>
-                <input type='checkbox' id='option_enable_ghost' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label'>Music</div>
-                <input type='checkbox' id='option_enable_music' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label'>SFX</div>
-                <input type='checkbox' id='option_enable_sound_effects' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label'>Background</div>
-                <input type='checkbox' id='option_enable_background_image' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label'>Rows</div>
-                <input type='number' min="10" id='option_number_of_rows' class='options_widget options_number' data-options-widget-type='number'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label'>Columns</div>
-                <input type='number' min="10" id='option_number_of_columns' class='options_widget options_number' data-options-widget-type='number'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label'>Previews</div>
-                <input type='number' min="0" id='option_number_of_previews' class='options_widget options_number' data-options-widget-type='number'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label'>Block Size</div>
-                <input type='number' min="4" id='option_block_size' class='options_widget options_number' data-options-widget-type='number'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label'>Seed</div>
-                <input type='text' id='option_seed' class='options_widget options_text' data-options-widget-type='text' placeholder="Empty == Random">
-            </div>
-            <div class='options_item' id='options_item_goal'>
-                <div class='options_label'>Goal</div>
-                <input type='number' min="1" id='option_goal' class='options_widget options_number_big' data-options-widget-type='text'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label'>Goal Type</div>
-                <select id='option_goal_type' class='options_widget options_select' data-options-widget-type='select'>
-                    <option value="none" selected>None</option>
-                    <option value="score">Score</option>
-                    <option value="level">Level</option>
-                    <option value="minutes">Minutes</option>
-                </select>
-            </div>
-            <div class='options_item'>
-                <div class='options_label' title='This is in milliseconds. Higher == Speed increases faster as levels increase'>Descent Multiplier</div>
-                <input type='number' min="1" id='option_descent_multiplier' class='options_widget options_number' data-options-widget-type='number'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label' title='This is in milliseconds. Lower == Faster'>Minimum Descent Delay</div>
-                <input type='number' min="10" id='option_min_descent_delay' class='options_widget options_number' data-options-widget-type='number'>
-            </div>
-            <div class='options_item'>
-                <div class='options_label' title='This is in milliseconds. Lower == Faster'>Hard Drop Delay</div>
-                <input type='number' min="0" id='option_hard_drop_delay' class='options_widget options_number' data-options-widget-type='number'>
-            </div>
-            <div class='options_item'>
+            <div id='options_sidebar'>
+                <div class='options_category_item options_category_item_selected' id='options_category_item_visual'>Visual</div>
+                <div class='options_category_item' id='options_category_item_audio'>Audio</div>
+                <div class='options_category_item' id='options_category_item_tweaks'>Tweaks</div>
+                <div class='options_category_item' id='options_category_item_goal'>Goal</div>
                 <div id="options_reset_button" class='action'>Reset</div>
+            </div>
+            <div id='options_content'>
+                <div id='options_category_visual' class='options_category'>
+                    <div class='options_item'>
+                        <div class='options_label'>Ghost</div>
+                        <input type='checkbox' id='option_enable_ghost' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Background</div>
+                        <input type='checkbox' id='option_enable_background_image' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Rows</div>
+                        <input type='number' min="10" id='option_number_of_rows' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Columns</div>
+                        <input type='number' min="10" id='option_number_of_columns' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Previews</div>
+                        <input type='number' min="0" id='option_number_of_previews' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Block Size</div>
+                        <input type='number' min="4" id='option_block_size' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                </div>
+                <div id='options_category_audio' class='options_category'>
+                    <div class='options_item'>
+                        <div class='options_label'>Music</div>
+                        <input type='checkbox' id='option_enable_music' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Sound Effects</div>
+                        <input type='checkbox' id='option_enable_sound_effects' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                    </div>
+                </div>
+                <div id='options_category_tweaks' class='options_category'>
+                    <div class='options_item'>
+                        <div class='options_label'>Seed</div>
+                        <input type='text' id='option_seed' class='options_widget options_text' data-options-widget-type='text' placeholder="Empty == Random">
+                    </div>
+                    <div class='options_item'>
+                            <div class='options_label' title='This is in milliseconds. Higher == Speed increases faster as levels increase'>Descent Multiplier</div>
+                            <input type='number' min="1" id='option_descent_multiplier' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label' title='This is in milliseconds. Lower == Faster'>Minimum Descent Delay</div>
+                        <input type='number' min="10" id='option_min_descent_delay' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label' title='This is in milliseconds. Lower == Faster'>Hard Drop Delay</div>
+                        <input type='number' min="0" id='option_hard_drop_delay' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                </div>
+                <div id='options_category_goal' class='options_category'>
+                    <div class='options_item'>
+                        <div class='options_label'>Goal Type</div>
+                        <select id='option_goal_type' class='options_widget options_select' data-options-widget-type='select'>
+                            <option value="none" selected>None</option>
+                            <option value="score">Score</option>
+                            <option value="level">Level</option>
+                            <option value="minutes">Minutes</option>
+                        </select>
+                    </div>
+                    <div class='options_item' id='options_item_goal'>
+                        <div class='options_label'>Goal</div>
+                        <input type='number' min="1" id='option_goal' class='options_widget options_number_big' data-options-widget-type='text'>
+                    </div>
+                </div>
             </div>
         </div>
     </script>
