--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <script src="js/libs/msg.min.js?version=1"></script>
         <script src="js/libs/separator.js?version=1"></script>
 
-        <script src="js/main/base.js?version=6"></script>
+        <script src="js/main/base.js?version=7"></script>
         <script src="js/main/utils.js?version=1"></script>
-        <script src="js/main/pieces.js?version=8"></script>
+        <script src="js/main/pieces.js?version=9"></script>
         <script src="js/main/grid.js?version=1"></script>
-        <script src="js/main/keyboard.js?version=3"></script>
+        <script src="js/main/keyboard.js?version=4"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=4"></script>
-        <script src="js/main/controls.js?version=1"></script>
+        <script src="js/main/options.js?version=5"></script>
+        <script src="js/main/controls.js?version=2"></script>
 
         <script>
             $(function()
@@ -165,8 +165,8 @@
                         <input type='number' min="10" id='option_min_descent_delay' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
                     <div class='options_item'>
-                        <div class='options_label' title='This is in milliseconds. Lower == Faster'>Hard Drop Delay</div>
-                        <input type='number' min="0" id='option_hard_drop_delay' class='options_widget options_number' data-options-widget-type='number'>
+                        <div class='options_label' title='This is in milliseconds. Lower == Faster'>Soft Drop Delay</div>
+                        <input type='number' min="0" id='option_soft_drop_delay' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
                 </div>
                 <div id='options_category_goal' class='options_category'>
@@ -207,8 +207,8 @@
                 <input type='text' id='control_move_left' data-category='game' class='controls_input'>
             </div>
             <div class='controls_item'>
-                <div class='controls_label'>Move Down</div>
-                <input type='text' id='control_move_down' data-category='game' class='controls_input'>
+                <div class='controls_label'>Soft Drop</div>
+                <input type='text' id='control_soft_drop' data-category='game' class='controls_input'>
             </div>
             <div class='controls_item'>
                 <div class='controls_label'>Hard Drop</div>
