Flash and Woosh

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Archon Tetris</title>
         <link rel='shortcut icon' href='img/favicon.png?version=1' type='image/x-icon'>
 
-        <link rel="stylesheet" type="text/css" href="css/style.css?version=5">
+        <link rel="stylesheet" type="text/css" href="css/style.css?version=6">
 
         <script src="js/libs/jquery.min.js?version=1"></script>
         <script src="js/libs/seedrandom.min.js?version=1"></script>
@@ -15,7 +15,7 @@
 
         <script src="js/main/base.js?version=7"></script>
         <script src="js/main/utils.js?version=1"></script>
-        <script src="js/main/pieces.js?version=10"></script>
+        <script src="js/main/pieces.js?version=11"></script>
         <script src="js/main/grid.js?version=1"></script>
         <script src="js/main/keyboard.js?version=4"></script>
         <script src="js/main/local_storage.js?version=1"></script>
@@ -94,6 +94,7 @@
         <audio preload id='sound_game_over' src='audio/game_over.mp3?version=2'></audio>
         <audio preload id='sound_pow' src='audio/pow.mp3?version=2'></audio>
         <audio preload id='sound_locked' src='audio/locked.mp3?version=2'></audio>
+        <audio preload id='sound_woosh' src='audio/woosh.mp3?version=4'></audio>
     </body>
 
     <script id='template_menu' type='text/x-handlebars-template' class='template'>
