Piece picker mod

--- a/index.html
+++ b/index.html
@@ -232,6 +232,10 @@
                 <input type='text' id='control_piece_picker_previous' data-category='piece_picker' class='controls_input'>
             </div>
             <div class='controls_item'>
+                <div class='controls_label'>Piece Picker: Select</div>
+                <input type='text' id='control_piece_picker_select' data-category='piece_picker' class='controls_input'>
+            </div>
+            <div class='controls_item'>
                 <div class='controls_label' id='controls_reset'>Reset</div>
             </div>
         </div>
