--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 POWs increase every 20 lines cleared.
             </div>
             <div class='help_item'>
-                Clearing more than 4 lines activates a piece picker to choose the next 4 pieces. This gets triggered on the next piece. The picker lasts for 3 seconds.
+                Clearing more than 4 lines activates a piece picker to choose the next 4 pieces. This gets triggered on the next piece.
             </div>
             <div class='help_item'>
                 Clearing all the lines spawns a big piece.
