Big piece mod and game over mod

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 Clearing more than 4 lines activates a piece picker to choose the next 4 pieces. This gets triggered on the next piece.
             </div>
             <div class='help_item'>
-                Clearing all the lines spawns a big piece.
+                Every 50 pieces placed a big piece appears.
             </div>
             <div class='help_item'>
                 <div id='help_controls'>Controls</div>
@@ -272,6 +272,7 @@
             <div id='game_over_level' class='game_over_big'></div>
             <div id='game_over_score' class='game_over_big'></div>
             <div id='game_over_time' class='game_over_big'></div>
+            <div id='game_over_pieces_placed' class='game_over_big'></div>
             <div id='game_over_lines_cleared' class='game_over_big'></div>
             <div id='game_over_max_combo' class='game_over_big'></div>
             <div id='game_over_pows_used' class='game_over_big'></div>
