--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Archon Tetris</title>
         <link rel='shortcut icon' href='img/favicon.png?version=1' type='image/x-icon'>
 
-        <link rel="stylesheet" type="text/css" href="css/style.css?version=10">
+        <link rel="stylesheet" type="text/css" href="css/style.css?version=11">
 
         <script src="js/libs/jquery.min.js?version=1"></script>
         <script src="js/libs/seedrandom.min.js?version=1"></script>
@@ -13,7 +13,7 @@
         <script src="js/libs/msg.min.js?version=1"></script>
         <script src="js/libs/separator.js?version=1"></script>
 
-        <script src="js/main/base.js?version=15"></script>
+        <script src="js/main/base.js?version=16"></script>
         <script src="js/main/utils.js?version=3"></script>
         <script src="js/main/pieces.js?version=18"></script>
         <script src="js/main/grid.js?version=1"></script>
@@ -275,6 +275,7 @@
             <div id='game_over_pieces_placed' class='game_over_big'></div>
             <div id='game_over_lines_cleared' class='game_over_big'></div>
             <div id='game_over_max_combo' class='game_over_big'></div>
+            <div id='game_over_pows_earned' class='game_over_big'></div>
             <div id='game_over_pows_used' class='game_over_big'></div>
             <div id='game_over_buttons'>
                 <div id='game_over_play_again' class='game_over_button action'>Play Again</div>
