Move Down control

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <script src="js/libs/msg.min.js?version=1"></script>
         <script src="js/libs/separator.js?version=1"></script>
 
-        <script src="js/main/base.js?version=16"></script>
+        <script src="js/main/base.js?version=17"></script>
         <script src="js/main/utils.js?version=3"></script>
-        <script src="js/main/pieces.js?version=18"></script>
+        <script src="js/main/pieces.js?version=19"></script>
         <script src="js/main/grid.js?version=1"></script>
-        <script src="js/main/keyboard.js?version=8"></script>
+        <script src="js/main/keyboard.js?version=9"></script>
         <script src="js/main/local_storage.js?version=1"></script>
         <script src="js/main/options.js?version=8"></script>
-        <script src="js/main/controls.js?version=3"></script>
+        <script src="js/main/controls.js?version=4"></script>
 
         <script>
             $(function()
@@ -206,6 +206,10 @@
             <div class='controls_item'>
                 <div class='controls_label'>Move Left</div>
                 <input type='text' id='control_move_left' data-category='game' class='controls_input'>
+            </div>
+            <div class='controls_item'>
+                <div class='controls_label'>Move Down</div>
+                <input type='text' id='control_move_down' data-category='game' class='controls_input'>
             </div>
             <div class='controls_item'>
                 <div class='controls_label'>Soft Drop</div>
