--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Archon Tetris</title>
         <link rel='shortcut icon' href='img/favicon.png?version=1' type='image/x-icon'>
 
-        <link rel="stylesheet" type="text/css" href="css/style.css?version=12">
+        <link rel="stylesheet" type="text/css" href="css/style.css?version=13">
 
         <script src="js/libs/jquery.min.js?version=1"></script>
         <script src="js/libs/seedrandom.min.js?version=1"></script>
@@ -13,13 +13,13 @@
         <script src="js/libs/msg.min.js?version=1"></script>
         <script src="js/libs/separator.js?version=1"></script>
 
-        <script src="js/main/base.js?version=18"></script>
+        <script src="js/main/base.js?version=19"></script>
         <script src="js/main/utils.js?version=3"></script>
         <script src="js/main/pieces.js?version=20"></script>
         <script src="js/main/grid.js?version=1"></script>
         <script src="js/main/keyboard.js?version=9"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=9"></script>
+        <script src="js/main/options.js?version=10"></script>
         <script src="js/main/controls.js?version=5"></script>
         <script src="js/main/textures.js?version=1"></script>
 
@@ -297,6 +297,7 @@
         <div id='texture_preview_element'></div>
         <div id='texture_preview_buttons' class='unselectable'>
             <div id='texture_preview_random'>Random</div>
+            <div id='texture_preview_previous'>Prev</div>
             <div id='texture_preview_close'>Close</div>
         </div>
     </script>
