--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <script src="js/libs/msg.min.js?version=1"></script>
         <script src="js/libs/separator.js?version=1"></script>
 
-        <script src="js/main/base.js?version=19"></script>
+        <script src="js/main/base.js?version=20"></script>
         <script src="js/main/utils.js?version=3"></script>
         <script src="js/main/pieces.js?version=20"></script>
         <script src="js/main/grid.js?version=1"></script>
         <script src="js/main/keyboard.js?version=9"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=10"></script>
+        <script src="js/main/options.js?version=11"></script>
         <script src="js/main/controls.js?version=5"></script>
         <script src="js/main/textures.js?version=1"></script>
 
@@ -297,8 +297,7 @@
         <div id='texture_preview_element'></div>
         <div id='texture_preview_buttons' class='unselectable'>
             <div id='texture_preview_random'>Random</div>
-            <div id='texture_preview_previous'>Prev</div>
-            <div id='texture_preview_close'>Close</div>
+            <div id='texture_preview_previous'>Previous</div>
         </div>
     </script>
 </html>
