Speed instead of Combo text

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <script src="js/libs/msg.min.js?version=1"></script>
         <script src="js/libs/separator.js?version=1"></script>
 
-        <script src="js/main/base.js?version=22"></script>
+        <script src="js/main/base.js?version=23"></script>
         <script src="js/main/utils.js?version=3"></script>
-        <script src="js/main/pieces.js?version=21"></script>
+        <script src="js/main/pieces.js?version=22"></script>
         <script src="js/main/grid.js?version=1"></script>
-        <script src="js/main/keyboard.js?version=9"></script>
+        <script src="js/main/keyboard.js?version=10"></script>
         <script src="js/main/local_storage.js?version=1"></script>
         <script src="js/main/options.js?version=13"></script>
         <script src="js/main/controls.js?version=5"></script>
@@ -41,7 +41,7 @@
                     </div>
                     <div id='info'>
                         <div id='level_text'>Level: 0</div>
-                        <div id='combo_text'>Combo: 0</div>
+                        <div id='speed_text'>Speed: 0</div>
                         <div id='pow_text'>POW: 0</div>
                     </div>
                     <div id='info2'>
