--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Archon Tetris</title>
         <link rel='shortcut icon' href='img/favicon.png?version=1' type='image/x-icon'>
 
-        <link rel="stylesheet" type="text/css" href="css/style.css?version=16">
+        <link rel="stylesheet" type="text/css" href="css/style.css?version=17">
 
         <script src="js/libs/jquery.min.js?version=1"></script>
         <script src="js/libs/seedrandom.min.js?version=1"></script>
@@ -14,7 +14,7 @@
         <script src="js/libs/separator.js?version=1"></script>
         <script src="js/libs/colorlib.js?version=1"></script>
 
-        <script src="js/main/base.js?version=25"></script>
+        <script src="js/main/base.js?version=26"></script>
         <script src="js/main/utils.js?version=3"></script>
         <script src="js/main/pieces.js?version=23"></script>
         <script src="js/main/grid.js?version=1"></script>
@@ -53,8 +53,8 @@
                 </div>
                 <div id='game_container'>
                     <div id='game' width=800 height=600></div>
-                    <div id='countdown' class='game_box'>3</div>
-                    <div id='paused' class='game_box'>Paused</div>
+                    <div id='countdown' class='game_box unselectable'>3</div>
+                    <div id='paused' class='game_box unselectable'>Paused</div>
                 </div>
                 <div id='sidebar'>
                     <div id='active_piece'>
