--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Archon Tetris</title>
         <link rel='shortcut icon' href='img/favicon.png?version=1' type='image/x-icon'>
 
-        <link rel="stylesheet" type="text/css" href="css/style.css?version=18">
+        <link rel="stylesheet" type="text/css" href="css/style.css?version=19">
 
         <script src="js/libs/jquery.min.js?version=1"></script>
         <script src="js/libs/seedrandom.min.js?version=1"></script>
@@ -20,10 +20,10 @@
         <script src="js/main/grid.js?version=1"></script>
         <script src="js/main/keyboard.js?version=10"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=13"></script>
+        <script src="js/main/options.js?version=14"></script>
         <script src="js/main/controls.js?version=5"></script>
         <script src="js/main/textures.js?version=1"></script>
-        <script src="js/main/theme.js?version=5"></script>
+        <script src="js/main/theme.js?version=6"></script>
 
         <script>
             $(function()
@@ -149,6 +149,14 @@
                     <div class='options_item'>
                         <div class='options_label'>Block Texture</div>
                         <select id='option_block_texture' class='options_widget options_select' data-options-widget-type='select'></select>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Block Shape</div>
+                        <select id='option_block_shape' class='options_widget options_select' data-options-widget-type='select'>
+                            <option value='square'>Square</option>
+                            <option value='rounded'>Rounded</option>
+                            <option value='circle'>Circle</option>
+                        </select>
                     </div>
                 </div>
                 <div id='options_category_audio' class='options_category'>
