--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <script src="js/libs/separator.js?version=1"></script>
         <script src="js/libs/colorlib.js?version=1"></script>
 
-        <script src="js/main/base.js?version=27"></script>
-        <script src="js/main/utils.js?version=3"></script>
-        <script src="js/main/pieces.js?version=25"></script>
+        <script src="js/main/base.js?version=28"></script>
+        <script src="js/main/utils.js?version=4"></script>
+        <script src="js/main/pieces.js?version=26"></script>
         <script src="js/main/grid.js?version=1"></script>
-        <script src="js/main/keyboard.js?version=10"></script>
+        <script src="js/main/keyboard.js?version=11"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=16"></script>
+        <script src="js/main/options.js?version=17"></script>
         <script src="js/main/controls.js?version=5"></script>
         <script src="js/main/textures.js?version=1"></script>
         <script src="js/main/theme.js?version=7"></script>
@@ -203,6 +203,18 @@
                     <div class='options_item'>
                         <div class='options_label' title='This is in milliseconds. Lower == Faster'>Soft Drop Delay</div>
                         <input type='number' min="0" id='option_soft_drop_delay' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label' title='This makes all pieces touching a cleared line to separate into independent blocks'>Independence</div>
+                        <input type='checkbox' id='option_independence' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Big Pieces</div>
+                        <input type='checkbox' id='option_big_pieces' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Piece Picker</div>
+                        <input type='checkbox' id='option_piece_picker' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                 </div>
                 <div id='options_category_goal' class='options_category'>
