--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         <script src="js/main/base.js?version=30"></script>
         <script src="js/main/utils.js?version=4"></script>
-        <script src="js/main/pieces.js?version=27"></script>
+        <script src="js/main/pieces.js?version=28"></script>
         <script src="js/main/grid.js?version=1"></script>
         <script src="js/main/keyboard.js?version=11"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=18"></script>
+        <script src="js/main/options.js?version=19"></script>
         <script src="js/main/controls.js?version=5"></script>
         <script src="js/main/textures.js?version=1"></script>
         <script src="js/main/theme.js?version=7"></script>
@@ -194,8 +194,8 @@
                         <input type='text' id='option_seed' class='options_widget options_text' data-options-widget-type='text' placeholder="Empty == Random">
                     </div>
                     <div class='options_item'>
-                            <div class='options_label' title='This is in milliseconds. Higher == Speed increases faster as levels increase'>Descent Multiplier</div>
-                            <input type='number' min="1" id='option_descent_multiplier' class='options_widget options_number' data-options-widget-type='number'>
+                        <div class='options_label' title='This is in milliseconds. Higher == Speed increases faster as levels increase'>Descent Multiplier</div>
+                        <input type='number' min="1" id='option_descent_multiplier' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
                     <div class='options_item'>
                         <div class='options_label' title='This is in milliseconds. Lower == Faster'>Minimum Descent Delay</div>
@@ -210,12 +210,20 @@
                         <input type='checkbox' id='option_independence' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                     <div class='options_item'>
-                        <div class='options_label'>Big Pieces</div>
-                        <input type='checkbox' id='option_big_pieces' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
-                    </div>
-                    <div class='options_item'>
                         <div class='options_label'>Piece Picker</div>
                         <input type='checkbox' id='option_piece_picker' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                    </div>
+                    <div class='options_item' id='options_item_piece_picker_list'>
+                        <div class='options_label'>Piece Picker List</div>
+                        <select id='option_piece_picker_list' class='options_widget options_select' data-options-widget-type='select'>
+                            <option value='normal_and_big'>Normal And Big Pieces</option>
+                            <option value='only_normal'>Only Normal Pieces</option>
+                            <option value='only_big'>Only Big Pieces</option>
+                        </select>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Big Pieces</div>
+                        <input type='checkbox' id='option_big_pieces' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                     <div class='options_item'>
                         <div class='options_label'>Line Clears To Level Up</div>
@@ -225,7 +233,7 @@
                         <div class='options_label'>Line Clears To Earn POW</div>
                         <input type='number' min="1" id='option_pow_goal' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
-                    <div class='options_item'>
+                    <div class='options_item' id='options_item_big_piece_goal'>
                         <div class='options_label'>Pieces Before Big Piece</div>
                         <input type='number' min="1" id='option_big_piece_goal' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
