--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <script src="js/libs/separator.js?version=1"></script>
         <script src="js/libs/colorlib.js?version=1"></script>
 
-        <script src="js/main/base.js?version=30"></script>
+        <script src="js/main/base.js?version=31"></script>
         <script src="js/main/utils.js?version=4"></script>
         <script src="js/main/pieces.js?version=28"></script>
         <script src="js/main/grid.js?version=1"></script>
         <script src="js/main/keyboard.js?version=11"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=19"></script>
+        <script src="js/main/options.js?version=20"></script>
         <script src="js/main/controls.js?version=5"></script>
         <script src="js/main/textures.js?version=1"></script>
         <script src="js/main/theme.js?version=7"></script>
@@ -125,7 +125,7 @@
                 <div id='options_category_visual' class='options_category'>
                     <div class='options_item'>
                         <div class='options_label'>Ghost</div>
-                        <input type='checkbox' id='option_enable_ghost' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                        <input type='checkbox' id='option_ghost' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                     <div class='options_item'>
                         <div class='options_label'>Rows</div>
@@ -181,11 +181,11 @@
                 <div id='options_category_audio' class='options_category'>
                     <div class='options_item'>
                         <div class='options_label'>Music</div>
-                        <input type='checkbox' id='option_enable_music' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                        <input type='checkbox' id='option_music' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                     <div class='options_item'>
                         <div class='options_label'>Sound Effects</div>
-                        <input type='checkbox' id='option_enable_sound_effects' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                        <input type='checkbox' id='option_sound_effects' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                 </div>
                 <div id='options_category_tweaks' class='options_category'>
@@ -225,17 +225,21 @@
                         <div class='options_label'>Big Pieces</div>
                         <input type='checkbox' id='option_big_pieces' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
-                    <div class='options_item'>
-                        <div class='options_label'>Line Clears To Level Up</div>
-                        <input type='number' min="1" id='option_level_goal' class='options_widget options_number' data-options-widget-type='number'>
-                    </div>
-                    <div class='options_item'>
-                        <div class='options_label'>Line Clears To Earn POW</div>
-                        <input type='number' min="1" id='option_pow_goal' class='options_widget options_number' data-options-widget-type='number'>
-                    </div>
                     <div class='options_item' id='options_item_big_piece_goal'>
                         <div class='options_label'>Pieces Before Big Piece</div>
                         <input type='number' min="1" id='option_big_piece_goal' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>POW</div>
+                        <input type='checkbox' id='option_pow' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                    </div>
+                    <div class='options_item' id='options_item_pow_goal'>
+                        <div class='options_label'>Line Clears To Earn POW</div>
+                        <input type='number' min="1" id='option_pow_goal' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Line Clears To Level Up</div>
+                        <input type='number' min="1" id='option_level_goal' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
                 </div>
                 <div id='options_category_goal' class='options_category'>
